presentation syntax col

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -526,7 +526,7 @@ The internal case is nominative, as the predicate \tit{mögen} `to like' takes n
 The external case is nominative as well, as the predicate \tit{besuchen} `to visit' also takes nominative subjects.
 The relative pronoun \tit{wer} `\ac{rel}.\ac{an}.\ac{nom}' appears in the internal and external case: the nominative.
 
-\exg. Uns besucht, wer Maria mag.\\
+\exg. Uns besucht, \tbf{wer} \tbf{Maria} \tbf{mag}.\\
  2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{an}.\ac{nom} Maria.\ac{acc} like.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
  `Who visits us likes Maria.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-nom}
 
@@ -535,7 +535,7 @@ The internal case is accusative, as the predicate \tit{mögen} `to like' takes a
 The external case is accusative as well, as the predicate \tit{einladen} `to invite' also takes accusative objects.
 The relative pronoun \tit{wen} `\ac{rel}.\ac{an}.\ac{acc}' appears in the internal and external case: the accusative.
 
-\exg. Ich {lade ein}, wen auch Maria mag.\\
+\exg. Ich {lade ein}, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}.\\
  1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{acc} Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
  `I invite who Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-acc}
 
@@ -544,8 +544,8 @@ The internal case is dative, as the predicate \tit{vertrauen} `to please' takes 
 The external case is dative as well, as the predicate \tit{folgen} `to follow' also takes dative objects.
 The relative pronoun \tit{wem} `\ac{rel}.\ac{an}.\ac{dat}' appears in the internal and external case: the dative.
 
-\exg. Ich folge, wem immer ich vertraue.\\
- 1\ac{sg}.\ac{nom} folge.\ac{pres}.1\ac{sg}\scsub{[dat]} \ac{rel}.\ac{an}.\ac{dat} ever 1\ac{sg}.\ac{nom} vertraue.\ac{pres}.3\ac{sg}\scsub{[dat]}.\\
+\exg. Ich folge, \tbf{wem} \tbf{immer} \tbf{ich} \tbf{vertraue}.\\
+ 1\ac{sg}.\ac{nom} folge.\ac{pres}.1\ac{sg}\scsub{[dat]} \ac{rel}.\ac{an}.\ac{dat} ever 1\ac{sg}.\ac{nom} vertraue.\ac{pres}.3\ac{sg}\scsub{[dat]}\\
  `I follow whoever I trust.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{342}}\label{ex:mg-dat-dat}
 
 These findings can be summarized as in Table \ref{tbl:summary-mg-matching}. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The nominative marked in light gray corresponds to \ref{ex:mg-nom-nom}, in which the internal nominative case competes against the external nominative case, and the relative pronoun surfaces in the nominative case. The accusative marked in dark gray corresponds to \ref{ex:mg-acc-acc}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case. The unmarked dative corresponds to \ref{ex:mg-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
@@ -597,7 +597,7 @@ The example is grammatical, because the example adheres to the case scale, and t
 
 The example in \ref{ex:mg-nom-acc-u} is identical to \ref{ex:mg-nom-acc}, except for that the relative pronoun appears in the external less complex nominative case. This example is ungrammatical: although the internal case is more complex, the relative pronoun appears in the least complex case (the nominative) and not in the most complex case (the accusative).
 
-\exg. *Uns besucht, \tbf{wer} \tbf{Maria} \tbf{mag}.\\
+\exg. *Uns besucht, wer \tbf{Maria} \tbf{mag}.\\
  2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{an}.\ac{nom} Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
  `Who visits us, Maria likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-u}
 
@@ -615,7 +615,7 @@ The example adheres to the case scale, but the most complex case (here the accus
 The example in \ref{ex:mg-acc-nom-u} is identical to \ref{ex:mg-acc-nom}, except for that the relative pronoun appears in the external less complex nominative case. This example is also ungrammatical: in addition to the most complex case not being the internal case, the relative pronoun also does not appear in the most complex case (the accusative) but in the least complex case (the nominative).\footnote{
 Not every speaker or Modern German agrees with the ungrammaticality of \ref{ex:mg-acc-nom-u}. A sentence for which also has been claimed that speakers accept it is given in \ref{ex:mg-liebe-hasse}. This example was originally marked as ungrammatical by \pgcitet{groos1981}{206}.
 
-\exg. Ich liebe wer gutes tut, und hasse, wer mich verletzt.\\
+\exg. Ich liebe \tbf{wer} \tbf{gutes} \tbf{tut}, und hasse, \tbf{wer} \tbf{mich} \tbf{verletzt}.\\
 1\ac{sg}.\ac{nom} love.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{nom} good.\ac{nmlz} do.3\ac{sg}\scsub{[nom]}
 and hate.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{nom} I\ac{sg}.\ac{acc} hurt.3\ac{sg}\scsub{[nom]}\\
 `I love who does good and hate who hurts me.' \flushfill{Modern German, adapted from \pgcitealt{groos1981}{206}}\label{ex:mg-liebe-hasse}
@@ -625,7 +625,7 @@ The relative acceptability of \ref{ex:mg-acc-nom-u} and \ref{ex:mg-liebe-hasse} 
 Notice that this type of example is crucially different from the Old High German counterexample in \ref{ex:ohg-counterexample}. In the Old High German situation, there was a grammatical possibility which was not used, and in the Modern German situation, there is no grammatical way to make a headless relative.
 }
 
-\exg. *Ich {lade ein}, wer \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
+\exg. *Ich {lade ein}, \tbf{wer} \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
 1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{nom} 1\ac{sg}.\ac{dat} nice be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
 `I invite who I like.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom-u}
 
@@ -678,7 +678,7 @@ The example adheres to the case scale, and the most complex case (here the dativ
 
 The example in \ref{ex:mg-nom-dat-u} is identical to \ref{ex:mg-nom-dat}, except for that the relative pronoun appears in the external less complex nominative case. This example is ungrammatical: although the internal case is more complex, the relative pronoun appears in the least complex case (the nominative) and not in the most complex case (the dative).
 
-\exg. *Uns besucht, \tbf{wer} \tbf{Maria} \tbf{vertraut}.\\
+\exg. *Uns besucht, wer \tbf{Maria} \tbf{vertraut}.\\
 2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{an}.\ac{nom} Maria.\ac{nom} trust.\ac{pres}.3\ac{sg}\scsub{[dat]}\\
 `Who visits us, Maria trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat-u}
 
@@ -695,7 +695,7 @@ The example adheres to the case scale, but the most complex case (here the dativ
 
 The example in \ref{ex:mg-dat-nom-u} is identical to \ref{ex:mg-dat-nom}, except for that the relative pronoun appears in the external less complex nominative case. This example is also ungrammatical: in addition to the most complex case not being the internal case, the relative pronoun also does not appear in the most complex case (the dative) but in the least complex case (the nominative).
 
-\exg. *Ich vertraue, wer \tbf{Hitchcock} \tbf{mag}.\\
+\exg. *Ich vertraue, \tbf{wer} \tbf{Hitchcock} \tbf{mag}.\\
 1\ac{sg}.\ac{nom} trust.\ac{pres}.1\ac{sg}\scsub{[dat]} \ac{rel}.\ac{an}.\ac{nom} Hitchcock.\ac{acc} like.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
 `I trust who likes Hitchcock.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom-u}
 
@@ -743,13 +743,13 @@ The relative pronoun \tit{wem} `\ac{rel}.\ac{an}.\ac{dat}' appears in the intern
 The example adheres to the case scale, and the most complex case (here the dative) is the internal case, so the example is grammatical.
 
 \exg. Ich {lade ein}, \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
-1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{dat} also Maria.\ac{nom} trust.\ac{pres}.3\ac{sg}\scsub{[dat]}.\\
+1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{dat} also Maria.\ac{nom} trust.\ac{pres}.3\ac{sg}\scsub{[dat]}\\
 `I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
 
 The example in \ref{ex:mg-acc-dat-u} is identical to \ref{ex:mg-acc-dat}, except for that the relative pronoun appears in the external less complex accusative case. This example is ungrammatical: although the internal case is more complex, the relative pronoun appears in the least complex case (the accusative) and not in the most complex case (the dative).
 
-\exg. *Ich {lade ein}, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
-1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{acc} also Maria.\ac{nom} trust.\ac{pres}.3\ac{sg}\scsub{[dat]}.\\
+\exg. *Ich {lade ein}, wen \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{acc} also Maria.\ac{nom} trust.\ac{pres}.3\ac{sg}\scsub{[dat]}\\
 `I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-u}
 
 Now I turn again to the situation in which the external case wins the competition, and there is no grammatical outcome possible, whichever case the relative pronoun appears in.
@@ -760,13 +760,13 @@ The relative pronoun \tit{wem} `\ac{rel}.\ac{an}.\ac{dat}' appears in the extern
 The example adheres to the case scale, but the most complex case (here the dative) is not the internal case. The example is ungrammatical, because only the internal can win the case competition in Modern German.
 
 \exg. *Ich vertraue, wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
-1\ac{sg}.\ac{nom} trust.\ac{pres}.1\ac{sg}\scsub{[dat]} \ac{rel}.\ac{an}.\ac{dat} also Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}.\\
+1\ac{sg}.\ac{nom} trust.\ac{pres}.1\ac{sg}\scsub{[dat]} \ac{rel}.\ac{an}.\ac{dat} also Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
 `I trust whoever Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc}
 
 The example in \ref{ex:mg-dat-acc-u} is identical to \ref{ex:mg-dat-acc}, except for that the relative pronoun appears in the external less complex accusative case. This example is also ungrammatical: in addition to the most complex case not being the internal case, the relative pronoun also does not appear in the most complex case (the dative) but in the least complex case (the accusative).
 
-\exg. *Ich vertraue, wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
-1\ac{sg}.\ac{nom} trust.\ac{pres}.1\ac{sg}\scsub{[dat]} \ac{rel}.\ac{an}.\ac{acc} also Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}.\\
+\exg. *Ich vertraue, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+1\ac{sg}.\ac{nom} trust.\ac{pres}.1\ac{sg}\scsub{[dat]} \ac{rel}.\ac{an}.\ac{acc} also Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
 `I trust whoever Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-u}
 
 The two examples in which the nominative and the dative compete are highlighted in Table \ref{tbl:case-competition-mg-acc-dat}.
@@ -1014,7 +1014,7 @@ Consider the example in \ref{ex:polish-acc-acc}, in which the internal accusativ
 The internal case and external case are accusative, as the predicate \tit{lubić} `to like' in both clauses takes accusative objects.
 The relative pronoun \tit{kogo} `\tsc{rel}.\tsc{acc}.\tsc{an}.\tsc{sg}' appears in the internal and external case: the accusative.
 
-\exg. Jan lubi kogo -kolkwiek Maria lubi.\\
+\exg. Jan lubi kogo -\tbf{kolkwiek} \tbf{Maria} \tbf{lubi}.\\
  Jan like.\tsc{3sg}\scsub{[acc]} \tsc{rel}.\tsc{acc}.\tsc{an}.\tsc{sg} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
  `Jan likes whoever Maria likes.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-acc}
 
@@ -1023,7 +1023,7 @@ The internal case is dative, as the predicate \tit{ufać} `to trust' takes dativ
 The external case is dative as well, as the predicate \tit{pomagać} `to help' also takes dative objects.
 The relative pronoun \tit{them} `\ac{rel}.\ac{pl}.\ac{an}.\ac{dat}' appears in the internal and external case: the dative.
 
-\exg. Jan pomaga komu -kolkwiek ufa.\\
+\exg. Jan pomaga komu -\tbf{kolkwiek} \tbf{ufa}.\\
  Jan help.\tsc{3sg}\scsub{[dat]} \tsc{rel}.\tsc{dat}.\tsc{an}.\tsc{sg} ever trust.\tsc{3sg}\scsub{[dat]}\\
  `Jan helps whomever he trusts.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-dat}
 
@@ -1216,31 +1216,31 @@ The matching type could also have been generated with the second parameter. The 
 
 \begin{figure}[H]
   \centering
-    \footnotesize{
-    \begin{tikzpicture}[node distance=1.5cm]
-      \node (question2) [question]
-      {allow mismatches?};
-          \node (outcome2) [outcome, below of=question2, xshift=-1.5cm]
-          {matching};
-              \node (example2) [example, below of=outcome2, yshift=0.25cm]
-              {\scriptsize{e.g. Polish\\\phantom{x}}};
-          \node (question3) [question, below of=question2, xshift=2cm, yshift=-0.5cm]
-          {cases allowed:};
-              \node (outcome3) [outcome, below of=question3, xshift=-1.5cm]
-              {\ac{int} + complex};
-                  \node (example3) [example, below of=outcome3, yshift=0.25cm]
-                  {\scriptsize{e.g. Modern German\\\phantom{x}}};
-              \node (outcome4) [outcome, below of=question3, xshift=1.5cm]
-              {complex};
-                  \node (example3) [example, below of=outcome4, yshift=0.25cm]
-                  {\scriptsize{e.g. Gothic, Old High German, Classical Greek}};
+  \footnotesize{
+  \begin{tikzpicture}[node distance=1.5cm]
+    \node (question2) [question]
+    {allow \tsc{int}?};
+        \node (outcome2) [outcome, below of=question2, xshift=-1.5cm]
+        {matching};
+            \node (example2) [example, below of=outcome2, yshift=0.25cm]
+            {\scriptsize{e.g. Polish\\\phantom{x}}};
+        \node (question3) [question, below of=question2, xshift=2cm, yshift=-0.5cm]
+        {allow \tsc{ext}?};
+            \node (outcome3) [outcome, below of=question3, xshift=-1.5cm]
+            {internal-only};
+                \node (example3) [example, below of=outcome3, yshift=0.25cm]
+                {\scriptsize{e.g. Modern German\\\phantom{x}}};
+            \node (outcome4) [outcome, below of=question3, xshift=1.5cm]
+            {unrestricted};
+                \node (example4) [example, below of=outcome4, yshift=0.25cm]
+                {\scriptsize{e.g. Gothic, Old High German, Classical Greek}};
 
-    \draw [arrow] (question2) -- node[anchor=east] {no} (outcome2);
-    \draw [arrow] (question2) -- node[anchor=west] {yes} (question3);
-    \draw [arrow] (question3) -- node[anchor=east] {\ac{int}} (outcome3);
-    \draw [arrow] (question3) -- node[anchor=west] {\ac{int} + \ac{ext}} (outcome4);
-    \end{tikzpicture}
-    }
+  \draw [arrow] (question2) -- node[anchor=east] {no} (outcome2);
+  \draw [arrow] (question2) -- node[anchor=west] {yes} (question3);
+  \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
+  \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
+  \end{tikzpicture}
+  }
     \caption{Attested patterns in headless relatives with case competition}
     \label{fig:attested-headless-relatives-case-competition}
 \end{figure}
@@ -1551,7 +1551,7 @@ This example is compatible with three patterns. First, Modern Greek could be a c
         [\ac{gen}]
             & *
             & *
-            & \ac{dat}
+            & \ac{gen}
             \\
       \bottomrule
    \end{tabular}
@@ -1583,7 +1583,7 @@ Second, Modern Greek could be a case competition language that allows the intern
          [\ac{gen}]
              & \ac{gen}
              & \ac{gen}
-             & \ac{dat}
+             & \ac{gen}
              \\
        \bottomrule
     \end{tabular}
@@ -1615,7 +1615,7 @@ Third, Modern Greek could be a language without case competition that lets the r
        [\ac{gen}]
            & \ac{nom}
            & \ac{acc}
-           & \ac{dat}
+           & \ac{gen}
            \\
      \bottomrule
    \end{tabular}
@@ -1670,7 +1670,7 @@ Instead, as illustrated by Table \ref{tbl:no-case-competition-greek}, the langua
       [\ac{gen}]
           & \ac{nom}
           & \ac{acc}
-          & \ac{dat}
+          & \ac{gen}
           \\
     \bottomrule
   \end{tabular}
@@ -1826,7 +1826,7 @@ If the language lets its relative pronouns appear in the external case, the patt
     \node (question1) [question]
     {cases\\ considered:};
         \node (outcome1) [outcome, below of=question1, xshift=-1.5cm]
-        {\ac{ext}};
+        {always external};
             \node (example1) [example, below of=outcome1, yshift=0.25cm]
             {\scriptsize{e.g. Old English, Modern Greek (5)}};
     \node (question2) [question, below of=question1, xshift=2cm, yshift=-0.5cm]
