--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -121,7 +121,7 @@ The light gray marking corresponds to \ref{ex:gothic-nom-acc-rep}, in which the 
  \caption{Gothic headless relatives (\ac{nom} --- \ac{acc})}
  \begin{tabular}{c|c|c|c}
    \toprule
-     \diagbox[linecolor=white]{\phantom{xxx}}{\phantom{xxx}}
+     \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
          & [\ac{nom}]
          & [\ac{acc}]
          & [\ac{dat}]
@@ -155,7 +155,7 @@ The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears i
 Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in the nominative case are unattested.
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
- but \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love.\scsub{[nom]}\\
+ but \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-nom-dat}
 
 Consider the example in \ref{ex:gothic-dat-nom}, in which the internal nominative case competes against the external dative case.
@@ -175,7 +175,7 @@ The two examples in which the nominative and the dative compete are showed in Ta
   \caption{Gothic headless relatives (\ac{nom} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
     \toprule
-      \diagbox[linecolor=white]{\phantom{xxx}}{\phantom{xxx}}
+      \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
           & [\ac{nom}]
           & [\ac{acc}]
           & [\ac{dat}]
@@ -236,7 +236,7 @@ The two examples in which the accusative and the dative compete are showed in Ta
   \caption{Gothic headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
     \toprule
-      \diagbox[linecolor=white]{\phantom{xxx}}{\phantom{xxx}}
+      \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
           & [\ac{nom}]
           & [\ac{acc}]
           & [\ac{dat}]
