--- a/thesis.tex
+++ b/thesis.tex
@@ -78,7 +78,7 @@ thanks
 % \include{case-decomposition}
 
 % \part{The base}\label{part:variation}
-% \include{case-competition-typology}
+\include{case-competition-typology}
 \include{committee}
 
 \bookmarksetup{startatroot}
