modern german and polish is ok now

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -1708,6 +1708,8 @@ When the relative clause is dislocated, both the internal and the external case 
 \phantom{x}
 }
 
+\footnote{Then there is also the thing that Modern Greek has oblique accusatives that require a clitic. Difference between S-\tsc{acc} and B-\tsc{acc}.}
+
 In sum, Old English and Modern Greek are languages without case competition in their headless relatives. The relative pronoun always appears in the external case.
 
 \subsection{A typology of headless relatives}\label{sec:typology}
