basic idea and further

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -239,7 +239,7 @@ The internal case is nominative, as the predicate \tit{senten} `to send' takes n
 The external case is nominative as well, as the predicate \tit{queman} `to come' also takes nominative subjects.
 The relative pronoun \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the internal and external case: the nominative.
 
-\exg. quham dher chisendit scolda uuerdhan\\
+\exg. quham \tbf{dher} \tbf{chisendit} \tbf{scolda} \tbf{uuerdhan}\\
  come.\ac{pst}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} send.\ac{pst}.\ac{ptcp}\scsub{[nom]} should.\ac{pst}.3\ac{sg} become.\ac{inf}\\
  `the one, who should have been sent, came' \flushfill{Old High German, \ac{isid} 35:5}\label{ex:ohg-nom-nom}
 
@@ -248,7 +248,7 @@ The internal case is accusative, as the predicate \tit{quedan} `to speak' takes 
 The external case is accusative as well, as the predicate \tit{gihoren} `to listen to' also takes accusative objects.
 The relative pronoun \tit{thiu} `\ac{rel}.\ac{pl}.\ac{n}.\ac{acc}' appears in the internal and external case: the accusative.
 
-\exg. gihortut ir thiu ih íu quad\\
+\exg. gihortut ir \tbf{thiu} \tbf{ih} \tbf{íu} \tbf{quad}\\
  listen.\ac{pst}.2\ac{pl}\scsub{[acc]} 2\ac{pl}.\ac{nom} \ac{rel}.\ac{pl}.\ac{n}.\ac{nom} 1\ac{sg}.\ac{nom} 2\ac{pl}.\ac{dat} speak.\ac{pst}.1\ac{sg}\scsub{[acc]}\\
  `you listened to those things, that I said to you' \flushfill{Old High German, \ac{tatian} 165:6}\label{ex:ohg-acc-acc}
 
@@ -259,7 +259,7 @@ The internal case is dative, as the predicate \tit{willian} `to wish' takes dati
 The external case is dative as well, as the predicate \tit{seggian} `to say' takes dative indirect objects.
 The relative pronoun \tit{them} `\ac{rel}.\ac{pl}.\ac{m}.\ac{dat}' appears in the internal and external case: the dative.
 
-\exg. sagda them siu uuelda\\
+\exg. sagda \tbf{them} \tbf{siu} \tbf{uuelda}\\
  say.\ac{pst}.3\ac{sg}\scsub{[dat]} \ac{rel}.\ac{pl}.\ac{m}.\ac{dat} 3\ac{sg}.\ac{f}.\ac{nom} wish.\ac{pst}.3\ac{sg}\scsub{[dat]}\\
  `she said to those, whom she wished for' \flushfill{Old Saxon, \ac{hel} 4:293}\label{ex:os-dat-dat}
 
